--- a/config/args.cfg
+++ b/config/args.cfg
@@ -6,7 +6,7 @@ text=Here is the help text for thia
 
 [[bravo]]
 short=-b
-long=--beta
+long=--bravo
 text=Use bravo for things
 meta=BREEBOO
 required=true
